compile/modify_2/files/tmp_1557939196.1.Compile_error
./files/tmp_1557939196.1.cpp:4:5: error: ‘vector’ does not name a type
     vector<int> twoSum(vector<int>& nums, int target) {
     ^
